--- a/boot.template/develop/isolinux/payload-develop.cfg
+++ b/boot.template/develop/isolinux/payload-develop.cfg
@@ -95,7 +95,7 @@ mkdir /media/cdrom
 mount /dev/cdrom /media/cdrom
 mkdir -p /root/PAYLOAD
 rsync -auv /media/cdrom/PAYLOAD/ /root/PAYLOAD/
-echo "### RPM Packages Prepared ###"
+echo "### RPM Packages Copied ###"
 echo "#"
 echo "#"
 echo "#"
